# blog-romira-dev

./: .env.example  .gitignore  Cargo.toml  LICENSE-MIT  README.md  bs-config.js  docker-compose.yml  index.html  package.json  tailwind.config.js  tailwind.css
.github/workflows/: deploy.yml  deploy_to_s3.yml  pr_check.yml  purge_cloudflare_cache.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
frontend/: Cargo.toml  README.md
frontend/src/: app.rs
infrastructure/: locals.tf  main.tf  static-web-server.tf
postgres/: Dockerfile
postgres/init.d/: init.sql
src/: app.rs  components.rs  const_value.rs  lib.rs  prelude.rs  routes.rs  setting.rs  settings.rs  state.rs  test_data.rs  views.rs
src/app/: controllers.rs  models.rs
src/app/controllers/: article.rs  article_controller.rs  author_controller.rs
src/app/models/: article.rs  author.rs  category.rs  cms_article.rs  cms_category.rs  fields.rs  traits.rs  wp_article.rs  wp_category.rs
src/components/: posts.rs
src/views/: articles.rs  components.rs  page.rs
src/views/components/: article_headline_view.rs  articles_view.rs  author_view.rs  external_service_icon.rs  header.rs  headline.rs
src/views/page/: article_view.rs  home.rs
