[package]
edition = "2021"
name = "blog-romira-dev"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ssr_hydrate"
required-features = ["hydration"]

[[bin]]
name = "ssr_server"
required-features = ["ssr"]

[dependencies]
anyhow = {version = "1.0.69", features = ["backtrace"]}
async-trait = "0.1.67"
bytes = "1.4.0"
chrono = {version = "0.4.23", features = ["serde"]}
dotenv = "0.15.0"
envy = "0.4.2"
fern = {version = "0.6.2", features = ["colored"]}
futures = {version = "0.3.26"}
gloo = {version = "0.11.0", features = ["futures"]}
log = "0.4.20"
once_cell = "1.17.1"
reqwest = {version = "0.11.14", features = ["json"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
strum = "0.24.1"
strum_macros = "0.24.3"
url = "2.3.1"
uuid = {version = "1.3.0", features = ["serde"]}
yew = "0.21.0"
yew-hooks = "0.3.0"
yew-router = "0.18.0"
yewdux = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.5.17"
clap = {version = "4.1.6", features = ["derive"]}
hyper = {version = "0.14", features = ["server", "http1"]}
jemallocator = "0.5"
openssl = {version = "0.10.45", features = ["vendored"]}
tokio = {version = "1.25.0", features = ["full"]}
tower = {version = "0.4.13", features = ["make"]}
tower-http = {version = "0.3.5", features = ["fs", "trace"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter", "json"]}

[features]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
