[package]
edition = "2021"
name = "blog-romira-dev"
version = "0.3.16"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ssr_hydrate"
required-features = ["hydration"]

[[bin]]
name = "ssr_server"
required-features = ["ssr"]

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-trait = "0.1.80"
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.2"
fern = { version = "0.6.2", features = ["colored"] }
futures = { version = "0.3.30" }
gloo = { version = "0.11.0", features = ["futures"] }
log = "0.4.21"
once_cell = "1.19.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = "0.26.2"
strum_macros = "0.26.2"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["serde"] }
yew = "0.21.0"
yew-hooks = "0.3.2"
yew-router = "0.18.0"
yewdux = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
hyper = { version = "1.3.1", features = ["server", "http1"] }
jemallocator = "0.5.4"
openssl = { version = "0.10.64", features = ["vendored"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["make"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[features]
default = ["ssr"]
hydration = ["yew/hydration"]
ssr = ["yew/ssr"]
