[package]
name = "blog-romira-dev-frontend"
version = "0.1.0"
edition = "2021"
description = "Frontend of website blog.romira.dev."
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.69"
console_error_panic_hook = "0.1.7"
derive_more = "0.99.17"
getset = "0.1.2"
gloo-utils = "0.1.6"
js-sys = "0.3.61"
log = "0.4.17"
once_cell = "1.17.0"
reqwasm = "0.5.0"
serde = { version = "1.0.152", feature = ["derive"] }
serde_json = "1.0.93"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
yew = { version="0.20", features=["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"

[dependencies.web-sys]
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "RequestCredentials",
    "Response",
    "Window",
    "Document",
    "DomTokenList",
    "Element",
    "HtmlButtonElement",
]
version = "0.3.61"